fixed spacing

--- a/Front End/bootstrap.css
+++ b/Front End/bootstrap.css
@@ -10195,6 +10195,20 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: transparent;
   border: 0;
 }
+.vote {
+  display: inline-block;
+  overflow: hidden;
+  width: 40px;
+  height: 25px;
+  cursor: pointer;
+  background: url('http://i.stack.imgur.com/iqN2k.png');
+  background-position: 0 -25px;
+} 
+
+
+.vote.on {
+  background-position: 0 2px;
+}
 
 .text-decoration-none {
   text-decoration: none !important;
